# starter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
conda-recipes/: base.yaml  dev.yaml
conf/: README.md  config.yaml
conf/env/: ci.yaml  local.yaml
conf/hydra/: default.yaml
conf/logging/: file.yaml
conf/profiling/: basic.yaml  pandas.yaml
conf/tracking/: disabled.yaml
docs/: ARCHITECTURE.md  BOOTSTRAP.md
starter/: __init__.py  cli.py  version.py
starter/artifacts/: README.md  __init__.py
starter/artifacts/backends/: __init__.py  local.py  null.py
starter/artifacts/core/: __init__.py  exceptions.py  factory.py  interfaces.py  schema.py  validate.py
starter/conf/: README.md  config.yaml
starter/conf/artifacts/: default.yaml
starter/conf/env/: dev.yaml
starter/conf/logging/: console.yaml  disabled.yaml  rich.yaml  structlog.yaml
starter/conf/paths/: default.yaml  test.yaml
starter/conf/profiling/: disabled.yaml
starter/conf/runtime/: debug.yaml  default.yaml
starter/conf/sweeps/: default.yaml
starter/conf/tracking/: wandb.yaml
starter/config/: README.md  __init__.py
starter/config/core/: __init__.py  compose.py  registry.py  resolvers.py  schema.py  validate.py
starter/config/docs/: EXTENDING.md
starter/logging/: README.md  __init__.py
starter/logging/backends/: __init__.py  console.py  file.py  rich.py  structlog.py
starter/logging/core/: __init__.py  factory.py  interfaces.py  schema.py  validate.py
starter/profiling/: README.md  __init__.py
starter/profiling/backends/: __init__.py  basic.py  pandas.py
starter/profiling/core/: __init__.py  factory.py  interfaces.py  schema.py  validate.py
starter/runtime/: README.md  __init__.py
starter/runtime/core/: __init__.py  bootstrap.py  schema.py
starter/sweeps/: README.md  __init__.py
starter/sweeps/backends/: __init__.py  local.py  wandb.py
starter/sweeps/core/: __init__.py  factory.py  interfaces.py  schema.py  strategies.py  validate.py
starter/tracking/: README.md  __init__.py
starter/tracking/backends/: __init__.py  null.py  wandb.py
starter/tracking/core/: __init__.py  factory.py  interfaces.py  schema.py  validate.py
tests/: test_artifacts.py  test_config_compose.py  test_logging_factory.py  test_profiling_factory.py  test_runtime_bootstrap.py  test_sweeps.py  test_tracking_factory.py
